--- a/index.html
+++ b/index.html
@@ -8,51 +8,100 @@
   </head>
   <body>
     <h1>KOCHAM KAROLCIĘ</h1>
-    <ul class="gallery">
-      <li class="thumbnail"><img src="images/1.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/2.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/3.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/4.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/5.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/6.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/7.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/8.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/9.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/10.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/11.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/12.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/13.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/14.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/15.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/16.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/17.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/18.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/19.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/20.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/21.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/22.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/23.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/24.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/25.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/26.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/27.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/28.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/29.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/30.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/31.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/32.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/33.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/34.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/35.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/36.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/37.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/38.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/39.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/40.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/41.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/42.jpeg" alt="" /></li>
-      <li class="thumbnail"><img src="images/43.jpeg" alt="" /></li>
-    </ul>
+      <ul class="gallery">
+        <li class="thumbnail"><img src="images/1a.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/1.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/2.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/3.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/4.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/5.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/6.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/7.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/8.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/9.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/10.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/11.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/12.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/13.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/14.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/15.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/16.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/17.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/18.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/19.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/20.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/21.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/22.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/23.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/24.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/25.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/26.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/27.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/28.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/29.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/30.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/31.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/32.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/33.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/34.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/35.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/36.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/37.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/37a.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/38.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/38a.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/39.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/39a.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/40.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/41.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/42.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/43.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/44.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/45.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/46.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/47.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/48.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/49.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/50.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/51.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/52.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/53.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/54.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/55.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/56.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/57.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/58.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/59.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/60.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/61.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/62.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/63.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/64.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/65.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/66.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/67.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/68.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/69.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/70.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/71.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/72.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/73.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/74.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/75.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/76.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/77.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/78.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/79.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/80.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/81.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/82.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/83.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/84.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/85.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/86.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/87.jpeg" alt=""></li>
+        <li class="thumbnail"><img src="images/88.jpeg" alt=""></li>
+      </ul>
       <div class="popup hidden">
         <button aria-label="Zamknij" class="popup__close">&#10006;</button>
         <img src="" alt="" class="popup__img" />
